# docs/openapi/swaggerhub-export.json
@@ -988,27 +988,6 @@
         }
       }
     },
-    "/cart/find": {
-      "post": {
-        "tags": [
-          "user"
-        ],
-        "summary": "Find cart",
-        "operationId": "cartFind",
-        "responses": {
-          "200": {
-            "description": "Found cart",
-            "content": {
-              "application/json": {
-                "schema": {
-                  "$ref": "#/components/schemas/Cart"
-                }
-              }
-            }
-          }
-        }
-      }
-    },
     "/cart/{itemId}": {
       "delete": {
         "tags": [
@@ -1207,9 +1186,9 @@
     "/products/find": {
       "post": {
         "tags": [
-          "visitor"
+          "admin"
         ],
-        "summary": "List products by Moleculer default action",
+        "summary": "Admin product find",
         "operationId": "ProductPostFind",
         "parameters": [
           {
